# soroban-cli-js

./: .gitignore  Cargo.toml  README.md  build.js  cli.js  package.dist.json  package.json  test.js
crates/encoder/: Cargo.toml
crates/encoder/src/: lib.rs
crates/encoder/wit/: exports.wit  wasm-xdr-tools.wit
crates/invoke/: Cargo.toml
crates/invoke/src/: lib.rs
crates/invoke/wit/: exports.wit
lib/: hello_world.wasm
wasm-pack/json-rpc/: Cargo.toml  package-lock.json  package.json  server.js
wasm-pack/json-rpc/bower_components/stellar-sdk/: .bower.json
wasm-pack/json-rpc/src/: lib.rs
wasm-pack/json-rpc/src/rpc/: mod.rs  server.rs
wasm-pack/json-rpc/tests/: web.rs
xdr/: encoder.d.ts  encoder.js  enocder.js  test.js
xdr/exports/: exports.d.ts
