[package]
name = "encoder"
publish = false
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
test = false
doctest = false

[dependencies]
wit-bindgen-guest-rust = { workspace = true, features = ['default'] }
strval = { git = "https://github.com/AhaLabs/soroban-tools", rev = "168ca178162529fc4d84a038829109ea173fda2f"}
# strval = { path = "../../../s/soroban-cli/cmd/strval" }
serde_json = "1.0.82"


[dependencies.soroban-env-host]
workspace = true

[dependencies.soroban-ledger-snapshot]
version = "0.4.1"
git = "https://github.com/stellar/rs-soroban-sdk"
rev = "e1c3de33942f0e997680645941787102ebf61e85"

[dependencies.stellar-strkey]
version = "0.0.7"
git = "https://github.com/stellar/rs-stellar-strkey"
rev = "6e9bb10"