[package]
name = "soroban-rpc"
description = "Soroban CLI"
homepage = "https://github.com/stellar/soroban-cli"
repository = "https://github.com/stellar/soroban-cli"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
readme = "README.md"
version = "0.4.0"
edition = "2021"
rust-version = "1.67"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
## Soroban
soroban-env-host = { workspace = true, features = [
    "vm",
    "serde",
    "hostfn_log_fmt_values",
] }

## Networking
# jsonrpsee-http-client = { version = "0.16.2", optional = true }
# jsonrpsee-wasm-client = { version = "0.16.2", optional = true }
jsonrpsee-core = "0.16.2"
tokio = "1.25.0"

thiserror = "1.0.38"
serde_json = "1.0.82"
serde = "1.0.152"

wasm-bindgen = "0.2.63"
js-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"

[dependencies.web-sys]
version = "0.3.61"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  "console"
]
[dev-dependencies]
wasm-bindgen-test = "0.3.34"